--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <script src="https://unpkg.com/vue"></script>
     <script src="calculator.js"></script>
+    
 
 </head>
 
@@ -351,5 +352,5 @@ POPULAR</span>
 
     </div>
 </body>
-
+<script src="app.js"></script>
 </html>
