--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <div class="card" v-on:click="feature.selected = !feature.selected, manageQuoteFeatures(feature);">
                                         <div class="front">
                                             <div class="cover">
-                                                <img src="https://www.clipartsgram.com/image/124089475-california-beaches-tumblr-wallpaper-3.jpg" />
+                                                <img src="/images/200x200_OilPaintingOrange.jpg" />
                                                 <!--<i class="fa fa-envelope fa-5x" aria-hidden="true"></i>-->
                                             </div>
                                             <div class="user">                                                
