got rid of the image for now

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                                     <div class="card" v-on:click="feature.selected = !feature.selected, manageQuoteFeatures(feature);">
                                         <div class="front">
                                             <div class="cover">
-                                                <img src="/images/200x200_OilPaintingOrange.jpg" />
-                                                <!--<i class="fa fa-envelope fa-5x" aria-hidden="true"></i>-->
+                                                <!--<img src="/images/200x200_OilPaintingOrange.jpg" />-->
                                             </div>
-                                            <div class="user">                                                
+                                            <div class="user">
                                                 <i :class="feature.icon" aria-hidden="true"></i>
                                             </div>
+
                                             <div class="content">
                                                 <div class="main">
                                                     <h3 class="name">{{feature.name}}</h3>
