--- a/index.html
+++ b/index.html
@@ -7,186 +7,177 @@
 <!--<![endif]-->
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <style>
-    body {
-      padding-top: 50px;
-      padding-bottom: 20px;
-    }
-  </style>
-  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="https://use.fontawesome.com/92c4abe2be.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100,200,300,400,500,700,800,900" rel="stylesheet">
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/92c4abe2be.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100,200,300,400,500,700,800,900" rel="stylesheet">
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <!--<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>-->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <!--<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>-->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-    crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
 
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
-  <script src="https://unpkg.com/vue"></script>
-  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
-  <script src="https://unpkg.com/vuefire/dist/vuefire.js"></script>
-  <script src="calculator.js"></script>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+    <script src="https://unpkg.com/vuefire/dist/vuefire.js"></script>
+    <script src="calculator.js"></script>
 </head>
 
 <body>
-  <!--[if lt IE 8]>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-          aria-controls="navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">Greetail's App calculator</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right" role="form">
-          <div class="form-group">
-            <input type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="form-group">
-            <input type="password" placeholder="Password" class="form-control">
-          </div>
-          <button type="submit" class="btn btn-success">Sign in</button>
-        </form>
-      </div>
-      <!--/.navbar-collapse -->
-    </div>
-  </nav>
+                <a class="navbar-brand" href="#">Greetail's App calculator</a>
+            </div>
+            <!--/.navbar-collapse -->
+        </div>
+    </nav>
 
 
-  <div class="container">
-    <!-- Example row of columns -->
-    <div id="app" class="container">
-      <button class="button-primary" v-on:click="addQuote()">Save</button>
-      <div class="panel panel-success" v-for="section in sections" :key="section['.key']">
-        <div class="panel-heading">{{section.section_name}}</div>
-        <div class="panel-body">
-          <div class="well well-lg">
-            <div class="row">
-              <div class="col-sm-10 col-sm-offset-1">
+    <div class="container">
+        <!-- Example row of columns -->
+        <div id="app" class="container">
+            <button type="button" class="btn btn-success btn-bottom-right btn-circle btn-xl" v-on:click="addQuote()">
+                <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <div class="panel panel-success" v-for="section in sections" :key="section['.key']">
+                <div class="panel-heading">{{section.section_name}}</div>
+                <div class="panel-body">
+                    <div class="well well-lg">
+                        <div class="row">
+                            <div class="col-sm-10 col-sm-offset-1">
 
-                <div class="col-md-4 col-sm-6" v-for="feature in section.features" :key="feature['.key']">
-                  <div class="card-container manual-flip">
+                                <div class="col-md-4 col-sm-6" v-for="feature in section.features" :key="feature['.key']">
+                                    <div class="card-container manual-flip">
 
-                    <div class="cnrflash" v-if="feature.selected">
-                      <div class="cnrflash-inner">
-                        <span class="cnrflash-label">NOW <br> ADDED</span>
-                      </div>
-                    </div>
+                                        <div class="cnrflash" v-if="feature.selected">
+                                            <div class="cnrflash-inner">
+                                                <span class="cnrflash-label">NOW <br> ADDED</span>
+                                            </div>
+                                        </div>
 
-                    <div class="card">
-                      <div class="front">
-                        <div class="cover">
-                          <!--<img src="/images/200x200_OilPaintingOrange.jpg" />-->
-                        </div>
-                        <div class="user">
-                          <i :class="feature.icon" aria-hidden="true"></i>
-                        </div>
+                                        <div class="card">
+                                            <div class="front">
+                                                <div class="cover">
+                                                    <!--<img src="/images/200x200_OilPaintingOrange.jpg" />-->
+                                                </div>
+                                                <div class="user">
+                                                    <i :class="feature.icon" aria-hidden="true"></i>
+                                                </div>
 
-                        <div class="content">
-                          <div class="main">
-                            <h3 class="name">{{feature.name}}</h3>
-                            <p class="text-center">{{feature.description}}</p>
-                            <div class="btn btn-lg btn-block" v-on:click="feature.selected = !feature.selected, manageQuoteFeatures(feature);">
-                              <i class="fa fa-check-circle-o fa-2x animated fadeIn" v-if="!feature.selected"></i>
-                              <i class="fa trash-o fa-trash-o  fa-2x animated fadeIn" v-if="feature.selected"></i>
-                            </div>
-                          </div>
-                          <div class="footer">
-                            <button class="btn btn-simple" onclick="rotateCard(this)">
+                                                <div class="content">
+                                                    <div class="main">
+                                                        <h3 class="name">{{feature.name}}</h3>
+                                                        <p class="text-center">{{feature.description}}</p>
+                                                        <div class="btn btn-lg btn-block" v-on:click="feature.selected = !feature.selected, manageQuoteFeatures(feature);">
+                                                            <i class="fa fa-check-circle-o fa-2x animated fadeIn" v-if="!feature.selected"></i>
+                                                            <i class="fa trash-o fa-trash-o  fa-2x animated fadeIn" v-if="feature.selected"></i>
+                                                        </div>
+                                                    </div>
+                                                    <div class="footer">
+                                                        <button class="btn btn-simple" onclick="rotateCard(this)">
                                                         <i class="fa fa-mail-forward"></i> Tell me more
                                                     </button>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- end front panel -->
-                      <div class="back">
-                        <div class="header">
-                          <h5 class="motto">{{feature.name}}</h5>
-                        </div>
-                        <div class="content">
-                          <div class="main">
-                            <div class="form-group">
-                              <textarea placeholder="Tell me more about this feature" class="form-control" rows="12" id="comment">{{feature.comment}}</textarea>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="footer">
-                          <button class="btn btn-simple" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- end front panel -->
+                                            <div class="back">
+                                                <div class="header">
+                                                    <h5 class="motto">{{feature.name}}</h5>
+                                                </div>
+                                                <div class="content">
+                                                    <div class="main">
+                                                        <div class="form-group">
+                                                            <textarea placeholder="Tell me more about this feature" class="form-control" rows="12" id="comment">{{feature.comment}}</textarea>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="footer">
+                                                    <button class="btn btn-simple" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
                                                 <i class="fa fa-reply"></i> Back                       </button>
+                                                </div>
+                                            </div>
+                                            <!-- end back panel -->
+                                        </div>
+                                        <!-- end card -->
+                                    </div>
+                                    <!-- end card-container -->
+                                </div>
+                            </div>
+                            <!-- end col-sm-10 -->
                         </div>
-                      </div>
-                      <!-- end back panel -->
+                        <!-- end row -->
                     </div>
-                    <!-- end card -->
-                  </div>
-                  <!-- end card-container -->
                 </div>
-              </div>
-              <!-- end col-sm-10 -->
             </div>
-            <!-- end row -->
-          </div>
+
         </div>
-      </div>
 
+        <hr>
+
+        <footer>
+            <p>&copy; Greetail inc 2017</p>
+        </footer>
     </div>
+    <!-- /container -->
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
+    <script>
+                                                                                                                            window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
+    </script>
 
-    <hr>
+    <script src="js/vendor/bootstrap.min.js"></script>
 
-    <footer>
-      <p>&copy; Greetail inc 2017</p>
-    </footer>
-  </div>
-  <!-- /container -->
-  <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
-  <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
-  </script>
+    <script src="js/main.js"></script>
 
-  <script src="js/vendor/bootstrap.min.js"></script>
-
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-      (function (b, o, i, l, e, r) {
-        b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-          function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
-        e = o.createElement(i); r = o.getElementsByTagName(i)[0];
-        e.src = '//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e, r)
-      }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X', 'auto'); ga('send', 'pageview');
-  </script>
-  <script src="app.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+                                                                                                                                (function (b, o, i, l, e, r) {
+                                                                                                                                    b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                                                                                                                                        function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                                                                                                                                    e = o.createElement(i); r = o.getElementsByTagName(i)[0];
+                                                                                                                                    e.src = '//www.google-analytics.com/analytics.js';
+                                                                                                                                    r.parentNode.insertBefore(e, r)
+                                                                                                                                }(window, document, 'script', 'ga'));
+                                                                                                                            ga('create', 'UA-XXXXX-X', 'auto'); ga('send', 'pageview');
+    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
