--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <i class="glyphicon glyphicon-ok"></i>
             </button>
             <label class="badge badge-bottom-right btn-circle">
-                ${{total}}
+                {{ '$' + total.toFixed(0).replace(/(\d)(?=(\d{3})+(?:\.\d+)?$)/g, "$1,") }}
             </label>
         </div>
 
