--- a/index.html
+++ b/index.html
@@ -69,8 +69,22 @@
         </div>
     </nav>
 
+    <header id="page-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <i class="fa fa-mobile fa-5x" aria-hidden="true"></i>
+                    <div class="intro-text">
+                        <span class="name">Built your app just how you want it</span>
+                        <hr class="star-light">
+                        <p class="skills">Scroll down to get started</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-    <div id="app" class="container">
+    <div id="app" class="content-wrapper">
         <!-- Example row of columns -->
         <div class="container">
             <div class="panel panel-success" v-for="section in sections" :key="section['.key']">
