changes to header

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <div class="intro-text">
                         <span class="name">Built your app just how you want it</span>
                         <hr class="star-light">
+                        <p class="skills">Select features, see the price updated</p>
                         <p class="skills">Scroll down to get started</p>
                     </div>
                 </div>
