playing with animations

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                           <h3 class="name">{{feature.name}}</h3>
                           <p class="text-center">{{feature.description}}</p>
                           <div class="btn btn-lg btn-block" v-on:click="feature.selected = !feature.selected, manageQuoteFeatures(feature);">
-                            <i class="fa fa-check-circle-o fa-2x animated fadeIn" v-if="!feature.selected"></i>
-                            <i class="fa trash-o fa-trash-o  fa-2x animated fadeIn" v-if="feature.selected"></i>
+                            <i class="fa fa-check-circle-o fa-2x faa-shake animated-hover" v-if="!feature.selected"></i>
+                            <i class="fa trash-o fa-trash-o  fa-2x" v-if="feature.selected"></i>
                           </div>
                         </div>
                         <div class="footer">
                           <button class="btn btn-simple" onclick="rotateCard(this)">
-                                                        <i class="fa fa-mail-forward"></i> Tell me more
+                                                        <i class="fa fa-mail-forward faa-passing animated-hover"></i> Tell me more
                                                     </button>
                         </div>
                       </div>
@@ -163,7 +163,7 @@
         </div>
       </div>
       <button type="button" class="btn btn-success btn-bottom-right btn-circle btn-xl" v-on:click="addQuote()">
-                <i class="glyphicon glyphicon-ok"></i>
+                <i class="fa fa-check faa-pulse animated" aria-hidden="true"></i>
             </button>
       <label class="badge badge-bottom-right btn-circle">
                 {{ '$' + total.toFixed(0).replace(/(\d)(?=(\d{3})+(?:\.\d+)?$)/g, "$1,") }}
